fixed mobile layout paragraph spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -153,7 +153,7 @@ main img {
         margin-top: 0
     }
 
-    span.split> {
+    span.split>p {
         margin-bottom: 0
     }
 }
